New option: alignment of numbers, dots and thumbs

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 		<h2>Updatelog</h2>
 		<div id="updatelog">
 			<dl>
+				<dt>28/10/2011</dt>
+					<dd>- New options: alignment of numbers, dots and thumbs.</dd>
 				<dt>08/09/2011</dt>
 					<dd>- New animations: <a href="?animation=circles">circles</a>, <a href="?animation=circlesInside">circlesInside</a> and <a href="?animation=circlesRotate">circlesRotate</a></dd>
 
@@ -468,6 +470,12 @@ $(function(){
 						<td>null</td> 
 						<td><span class="code">$('.box_skitter_large').skitter({onLoad: function() { console.log('start!') } });</span></td> 
 					</tr>
+					<tr> 
+						<td>numbers_align</td> 
+						<td>Alignment of numbers/dots/thumbs</td> 
+						<td>left</td> 
+						<td><span class="code">$('.box_skitter_large').skitter({numbers_align: 'center'});</span></td> 
+					</tr>
 				</tbody> 
 			</table>
 			
@@ -483,4 +491,4 @@ $(function(){
 	
 </div>
 </body>
-</html> 
+</html>
