--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
 				options.animation = value;
 			}
 			else if (param == 'type_navigation') {
-				options[value] = true;
-				if (value == 'dots') $('.border_box').css({'marginBottom': '40px'});
+				if (value == 'dots_preview') {
+					$('.border_box').css({'marginBottom': '40px'});
+					options['dots'] = true;
+					options['preview'] = true;
+				}
+				else {
+					options[value] = true;
+					if (value == 'dots') $('.border_box').css({'marginBottom': '40px'});
+				}
 			}
 		}
 		
@@ -142,6 +149,7 @@
 				<li><a href="?type_navigation=numbers" class="selected">Numbers</a></li>
 				<li><a href="?type_navigation=thumbs" class="">Thumbs</a></li>
 				<li><a href="?type_navigation=dots" class="">Dots</a></li>
+				<li><a href="?type_navigation=dots_preview" class="">Dots with preview</a><span class="new">new!</span></li>
 			</ul>
 		</div>
 		
@@ -205,6 +213,9 @@
 		<h2>Updatelog</h2>
 		<div id="updatelog">
 			<dl>
+				<dt>05/11/2011</dt>
+					<dd>- New option: <a href="index.php?type_navigation=dots_preview">preview to go over the points</a> .</dd>
+					<dd>- Bug fixed: problem of memory consumption to blur the window with skitter working. <strong>Hint of <a href="http://thiagosf.net/projects/jquery/skitter/#comment-355473307">Dan Partac</a></strong></dd>
 				<dt>28/10/2011</dt>
 					<dd>- New options: alignment of numbers, dots and thumbs.</dd>
 				<dt>08/09/2011</dt>
@@ -264,8 +275,9 @@
 		<h2>Next updates:</h2>
 		<div id="updatelog">
 			<dl>
-				<dt>Option play/pause manually.</dt>
-				<dt>Progress bar slide actually.</dt>
+				<dt>Option play/pause manually</dt>
+				<dt>Progress bar slide actually</dt>
+				<dt>Themes</dt>
 			</dl>
 		</div>
 		
@@ -475,6 +487,12 @@ $(function(){
 						<td>Alignment of numbers/dots/thumbs</td> 
 						<td>left</td> 
 						<td><span class="code">$('.box_skitter_large').skitter({numbers_align: 'center'});</span></td> 
+					</tr>
+					<tr> 
+						<td>preview</td> 
+						<td>Preview with dots</td> 
+						<td>false</td> 
+						<td><span class="code">$('.box_skitter_large').skitter({dots: true, preview: true});</span></td> 
 					</tr>
 				</tbody> 
 			</table>
