Bug fixed jquery 1.8

--- a/index.html
+++ b/index.html
@@ -216,6 +216,23 @@
 		<h2>Updatelog</h2>
 		<div id="updatelog">
 			<dl>
+				<dt>04/09/2012</dt>
+					<dd>- Bug jquery 1.8 fixed: update jquery-color-animation</dd>
+				<dt>19/04/2012</dt>
+					<dd>- Bug fixed: in IE was jumping two slides to start.</dd>
+					<dd>- Bug fixed: conflict between the options <strong>progressbar</strong> and <strong>auto_play</strong>.</dd>
+					<dd>- New animations: <a href="?animation=swapBlocks">swapBlocks</a>, <a href="?animation=cut">cut</a></dd>
+				<dt>07/04/2012</dt>
+					<dd>- Added with_animations: specific animations.</dd>
+					<dd>- Added auto_play: sets whether the slideshow will start automatically.</dd>
+					<dd>- Thumbs: improved code.</dd>
+				<dt>02/02/2012</dt>
+					<dd>- Bug fixed: start slideshow with mouse over</dd>
+					<dd>- Bug fixed: animations circles, circlesInside and circlesRotate on Webkit.</dd>
+					<dd>- New animations: <a href="?animation=hideBars">hideBars</a>, <a href="?animation=swapBars">swapBars</a>, <a href="?animation=swapBarsBack">swapBarsBack</a></dd>
+				<dt>26/12/2011</dt>
+					<dd>- Redesign of the site!</dd>
+					<dd>- Added <a href="?enable_navigation_keys=true">enable navigation keys</a></dd>
 				<dt>18/12/2011</dt>
 					<dd>- Added progress bar</dd>
 					<dd>- Option does not stop the slideshow go over.</dd>
