New themes and bug fixes

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<script type="text/javascript" language="javascript">
 		$(document).ready(function() {
 			$('.box_skitter_large').skitter({
+				theme: 'clean',
 				numbers_align: 'center',
-				animateNumberOut: { backgroundColor: '#ccc' },
-				animateNumberOver: { backgroundColor: '#aaa' },
-				animateNumberActive: { backgroundColor: '#333' },
-				dots: true
+				progressbar: true, 
+				dots: true, 
+				preview: true
 			});
 		});
 	</script>
