--- a/multiple.html
+++ b/multiple.html
@@ -18,10 +18,10 @@
 	<!-- Init Skitter -->
 	<script type="text/javascript" language="javascript">
 		$(document).ready(function(){
-			$('.box_skitter_large').skitter({label: false, numbers: false});
-			$('.box_skitter_small').skitter({label: false, numbers: false, interval: 1000});
-			$('.box_skitter_medium').css({width: 500, height: 200}).skitter({show_randomly: true, navigation: false, dots: true, interval: 4000});
-			$('.box_skitter_normal').css({width: 400, height: 300}).skitter({animation: 'blind', interval: 2000, hideTools: true});
+			$('.box_skitter_large').skitter({label: false, numbers: false, theme: 'square'});
+			$('.box_skitter_small').skitter({label: false, numbers: false, interval: 1000, theme: 'clean'});
+			$('.box_skitter_medium').css({width: 500, height: 200}).skitter({show_randomly: true, dots: true, interval: 4000, numbers_align: 'center', theme: 'round'});
+			$('.box_skitter_normal').css({width: 400, height: 300}).skitter({animation: 'blind', interval: 2000, hideTools: true, theme: 'minimalist'});
 		});
 	</script>
 </head>
@@ -39,6 +39,7 @@
 				</div>
 			</div>
 			<div style="clear:both;"></div>
+			<br />
 			<div class="border_box">
 				<div class="box_skitter box_skitter_small">
 					<ul>
@@ -50,6 +51,7 @@
 		</div>
 		
 		<div style="clear:both;"></div>
+		<br />
 		
 		<div class="border_box" style="margin-bottom:45px;">
 			<div class="box_skitter box_skitter_medium">
@@ -62,6 +64,7 @@
 		</div>
 	
 		<div style="clear:both;"></div>
+		<br />
 
 		<div class="border_box">
 			<div class="box_skitter box_skitter_normal">
