--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
-	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8">
 	<title>Skitter - Slideshow for anytime!</title>
 	
 	<link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
@@ -10,9 +10,8 @@
 	<link href="css/skitter.styles.css" type="text/css" media="all" rel="stylesheet" />
 	
 	<!-- Skitter JS -->
-	<script type="text/javascript" language="javascript" src="js/jquery-1.6.3.min.js"></script>
+	<script type="text/javascript" language="javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" language="javascript" src="js/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" language="javascript" src="js/jquery.animate-colors-min.js"></script>
 	<script type="text/javascript" language="javascript" src="js/jquery.skitter.min.js"></script>
 	
 	<!-- Init Skitter -->
