Bugfix #21 and improvements in the rotation animation

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 			<div class="border_box">
 				<div class="box_skitter box_skitter_large">
 					<ul>
-						<li><a href="#cube"><img src="images/example/001.jpg" class="cube" /></a><div class="label_text"><p>cube</p></div></li>
-						<li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cubeRandom" /></a><div class="label_text"><p>cubeRandom</p></div></li>
-						<li><a href="#block"><img src="images/example/003.jpg" class="block" /></a><div class="label_text"><p>block</p></div></li>
-						<li><a href="#cubeStop"><img src="images/example/004.jpg" class="cubeStop" /></a><div class="label_text"><p>cubeStop</p></div></li>	
+						<li><a href="#cube"><img src="images/example/001.jpg" class="circles" /></a><div class="label_text"><p>cube</p></div></li>
+						<li><a href="#cubeRandom"><img src="images/example/002.jpg" class="circlesInside" /></a><div class="label_text"><p>cubeRandom</p></div></li>
+						<li><a href="#block"><img src="images/example/003.jpg" class="circlesRotate" /></a><div class="label_text"><p>block</p></div></li>
+						<li><a href="#cubeStop"><img src="images/example/004.jpg" class="cubeShow" /></a><div class="label_text"><p>cubeStop</p></div></li>	
 					</ul>
 				</div>
 			</div>
 		</div>
 		<h2>Enjoy! =D</h2>
-		<h3><a href="http://www.skitter-slider.net">See documentation</a></h3>
+		<h3><a href="http://www.skitter-slider.net/documentation">See documentation</a></h3>
 	</div>
 </body>
 </html>
