--- a/examples/index.html
+++ b/examples/index.html
@@ -7,12 +7,12 @@
   <link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
 
   <!-- Skitter Styles -->
-  <link href="css/skitter.styles.min.css" type="text/css" media="all" rel="stylesheet" />
+  <link href="../dist/skitter.css" type="text/css" media="all" rel="stylesheet" />
   
   <!-- Skitter JS -->
   <script type="text/javascript" language="javascript" src="js/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" language="javascript" src="js/jquery.easing.1.3.js"></script>
-  <script type="text/javascript" language="javascript" src="js/jquery.skitter.min.js"></script>
+  <script type="text/javascript" language="javascript" src="../dist/jquery.skitter.min.js"></script>
   
   <!-- Init Skitter -->
   <script type="text/javascript" language="javascript">
@@ -29,7 +29,10 @@
 </head>
 <body>
   <div id="page">
-    <h1>Skitter - Slideshow for anytime!</h1>
+    <h1>
+      Skitter
+      <small>Slideshow for anytime!</small>
+    </h1>
     <div id="content">
       <div class="border_box">
         <div class="box_skitter box_skitter_large">
@@ -43,7 +46,7 @@
       </div>
     </div>
     <h2>Enjoy! =D</h2>
-    <h3><a href="http://www.skitter-slider.net/documentation">See documentation</a></h3>
+    <p class="text-right"><a href="http://www.skitter-slider.net/documentation" class="btn">See documentation</a></p>
   </div>
 </body>
 </html>
