Finalizando ajustes das animacoes para responsivo

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skitter - Slideshow for anytime!</title>
   
   <link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
@@ -37,16 +38,15 @@
       <div class="border_box">
         <div class="box_skitter box_skitter_large">
           <ul>
-            <li><a href="#cube"><img src="images/example/001.jpg" class="circles" /></a><div class="label_text"><p>cube</p></div></li>
-            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="circlesInside" /></a><div class="label_text"><p>cubeRandom</p></div></li>
-            <li><a href="#block"><img src="images/example/003.jpg" class="circlesRotate" /></a><div class="label_text"><p>block</p></div></li>
-            <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cubeShow" /></a><div class="label_text"><p>cubeStop</p></div></li> 
+            <li><a href="#cube"><img src="images/example/001.jpg" class="cut" /></a><div class="label_text"><p>cube</p></div></li>
+            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cut" /></a><div class="label_text"><p>cubeRandom</p></div></li>
+            <li><a href="#block"><img src="images/example/003.jpg" class="cut" /></a><div class="label_text"><p>block</p></div></li>
+            <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cut" /></a><div class="label_text"><p>cubeStop</p></div></li> 
           </ul>
         </div>
       </div>
     </div>
-    <h2>Enjoy! =D</h2>
-    <p class="text-right"><a href="http://www.skitter-slider.net/documentation" class="btn">See documentation</a></p>
+    <p class="see-documentation-p"><a href="http://www.skitter-slider.net/documentation" class="btn">See documentation</a></p>
   </div>
 </body>
 </html>
