--- a/examples/index.html
+++ b/examples/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skitter - Slideshow for anytime!</title>
   
-  <link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
-
   <!-- Skitter Styles -->
   <link href="../dist/skitter.css" type="text/css" media="all" rel="stylesheet" />
   
@@ -22,11 +20,15 @@
         theme: 'clean',
         numbers_align: 'center',
         progressbar: true, 
-        dots: true, 
-        preview: true
+        numbers: true, 
+        controls: true,
+        preview: true,
+        animation: 'randomSmart',
       });
     });
   </script>
+
+  <link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
 </head>
 <body>
   <div id="page">
@@ -38,15 +40,15 @@
       <div class="border_box">
         <div class="box_skitter box_skitter_large">
           <ul>
-            <li><a href="#cube"><img src="images/example/001.jpg" class="cut" /></a><div class="label_text"><p>cube</p></div></li>
-            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cut" /></a><div class="label_text"><p>cubeRandom</p></div></li>
-            <li><a href="#block"><img src="images/example/003.jpg" class="cut" /></a><div class="label_text"><p>block</p></div></li>
-            <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cut" /></a><div class="label_text"><p>cubeStop</p></div></li> 
+            <li><a href="#cube"><img src="images/example/001.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officiis voluptatum reprehenderit vitae amet beatae dolorem labore dignissimos nesciunt. Harum, blanditiis suscipit beatae unde id non, necessitatibus praesentium nisi quidem. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#block"><img src="images/example/003.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit eos nihil corrupti inventore id culpa repellat molestiae quam at molestias. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li> 
           </ul>
         </div>
       </div>
     </div>
-    <p class="see-documentation-p"><a href="http://www.skitter-slider.net/documentation" class="btn">See documentation</a></p>
+    <p class="see-documentation-p"><a href="http://www.skitter-slider.net/documentation" class="btn btn-green">See documentation</a></p>
   </div>
 </body>
 </html>
