Melhorando animacao circlesRotate

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,7 +23,8 @@
         numbers: true, 
         controls: true,
         preview: true,
-        animation: 'randomSmart',
+        animation: 'circlesInside',
+        // animation: 'randomSmart',
       });
     });
   </script>
@@ -40,7 +41,7 @@
       <div class="border_box">
         <div class="box_skitter box_skitter_large">
           <ul>
-            <li><a href="#cube"><img src="images/example/001.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#cube"><img src="images/example/001.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#see-more" class="btn btn-small btn-yellow">See more</a></p></div></li>
             <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officiis voluptatum reprehenderit vitae amet beatae dolorem labore dignissimos nesciunt. Harum, blanditiis suscipit beatae unde id non, necessitatibus praesentium nisi quidem. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
             <li><a href="#block"><img src="images/example/003.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
             <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit eos nihil corrupti inventore id culpa repellat molestiae quam at molestias. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li> 
