Removendo importants do css e adicionando suporte a touch

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,8 +17,12 @@
   <script type="text/javascript" language="javascript">
     $(document).ready(function() {
       $('.box_skitter_large').skitter({
-        theme: 'clean',
-        thumbs: true
+        // dots: true,
+        // numbers_align: 'center',
+        // theme: 'clean',
+        controls: true,
+        // numbers: true,
+        thumbs: true,
       });
 
       var currentTheme = 'skitter-clean';
