--- a/examples/index.html
+++ b/examples/index.html
@@ -49,7 +49,8 @@
       })
     });
   </script>
-
+  
+  <!-- Custom -->
   <link href="css/styles.css" type="text/css" media="all" rel="stylesheet" />
 </head>
 <body>
@@ -59,7 +60,7 @@
       <small>Slideshow for anytime!</small>
     </h1>
     <div id="content">
-      <div class="border_box">
+      <div class="skitter-large-box">
         <div class="skitter skitter-large with-dots">
           <ul>
             <li><a href="#cube"><img src="images/example/001.jpg" class="cubeHide" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#see-more" class="btn btn-small btn-yellow">See more</a></p></div></li>
@@ -87,7 +88,5 @@
 - [ ] numbers
 - [ ] dots
 - [ ] thumbs
-- [ ] multiple
-- [ ] fullscreen
-- [ ] themes (with change theme realtime)
+- [x] multiple
 -->
