--- a/examples/index.html
+++ b/examples/index.html
@@ -47,9 +47,9 @@
       <div class="skitter-large-box">
         <div class="skitter skitter-large with-dots">
           <ul>
-            <li><a href="#cube"><img src="images/example/001.jpg" class="cubeHide" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#see-more" class="btn btn-small btn-yellow">See more</a><img src="http://placehold.it/20x20"></p></div></li>
-            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="cubeSize" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officiis voluptatum reprehenderit vitae amet beatae dolorem labore dignissimos nesciunt. Harum, blanditiis suscipit beatae unde id non, necessitatibus praesentium nisi quidem. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
-            <li><a href="#block"><img src="images/example/003.jpg" class="cubeShow" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#cube"><img src="images/example/001.jpg" class="circles" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#see-more" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#cubeRandom"><img src="images/example/002.jpg" class="circlesInside" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore officiis voluptatum reprehenderit vitae amet beatae dolorem labore dignissimos nesciunt. Harum, blanditiis suscipit beatae unde id non, necessitatibus praesentium nisi quidem. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
+            <li><a href="#block"><img src="images/example/003.jpg" class="circlesRotate" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li>
             <li><a href="#cubeStop"><img src="images/example/004.jpg" class="cube" /></a><div class="label_text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit eos nihil corrupti inventore id culpa repellat molestiae quam at molestias. <a href="#" class="btn btn-small btn-yellow">See more</a></p></div></li> 
           </ul>
         </div>
@@ -63,6 +63,10 @@
         <li><a href="#" data-theme="minimalist">Minimalist</a></li>
         <li><a href="#" data-theme="round">Round</a></li>
       </ul>
+    </nav>
+    <nav class="skitter-animations" id="change-animation">
+      <h3>Animations</h3>
+      <ul></ul>
     </nav>
     <p class="see-documentation-p"><a href="http://www.skitter-slider.net/documentation" class="btn btn-green">See documentation</a></p>
   </div>
